--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
+            SCF_GATEWAY: "https://fodi.zzy-ac.workers.dev/",
             SITE_NAME: "FODI",
             IS_CF: true
         };
