--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         */
         window.GLOBAL_CONFIG = {
             SCF_GATEWAY: "https://fodi.zzy-ac.workers.dev/",
-            SITE_NAME: "zzy私人盘",
+            SITE_NAME: "zzy私人网盘",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
