--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <link rel="shortcut icon" href="/images/favicon.png">
     <script>
         /**
         * SCF_GATEWAY：SCF 云函数网关地址
@@ -8,7 +9,7 @@
         */
         window.GLOBAL_CONFIG = {
             SCF_GATEWAY: "https://fodi.zzy-ac.workers.dev/",
-            SITE_NAME: "zzy私人网盘",
+            SITE_NAME: "点墨私人网盘",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
