--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -143,6 +143,10 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
             <div class="mdui-list-item-content">Github</div>
         </a>
+        <a href="https://blog.zzy-ac.top/" class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
+            <div class="mdui-list-item-content">点墨阁</div>
+        </a>
 	</div>
 </div>
 
