--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="shortcut icon" href="/images/favicon.png">
+    <link rel="shortcut icon" href="/pictures/favicon_pan.png">
     <script>
         /**
         * SCF_GATEWAY：SCF 云函数网关地址
