--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       //     location.href = location.href.replace(/http/, 'https');
       // }
     </script>
+    <link rel="shortcut icon" href="https://zzy-ac.github.io/images/favicon_pan.png">
     <meta charset="utf-8" />
     <meta
       content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"
