--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        */
       window.GLOBAL_CONFIG = {
         SCF_GATEWAY: "//fodi.zzy-ac.workers.dev/",
-        SITE_NAME: "FODI",
+        SITE_NAME: "点墨云",
         IS_CF: true,
       };
       if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf("workers") === -1) {
