--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -143,12 +143,9 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
             <div class="mdui-list-item-content">Github</div>
         </a>
-<!--MultiDiskAreaStart-->
-<!--MultiDisksStart-->
-        <a href="https://pan.zzy-ac.top/?setup" class="mdui-list-item mdui-ripple" <!--MultiDisksNow-->>
-			<i class="mdui-list-item-icon mdui-icon material-icons">cloud</i>
-			<div class="mdui-list-item-content">登录</div>
-        </a>
+	<a href="https://pan.zzy-ac.top/?setup" class="mdui-list-item mdui-ripple">
+			<i class="mdui-list-item-icon mdui-icon material-icons">Login</i>
+			<div class="mdui-list-item-content"><!--constStr@Home--></div>
 
 	</div>
 </div>
