--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -144,8 +144,8 @@
             <div class="mdui-list-item-content">Github</div>
         </a>
 	<a href="https://pan.zzy-ac.top/?setup" class="mdui-list-item mdui-ripple">
-			<i class="mdui-list-item-icon mdui-icon material-icons">Login</i>
-			<div class="mdui-list-item-content"><!--constStr@Home--></div>
+			<i class="mdui-list-item-icon mdui-icon material-icons">home</i>
+			<div class="mdui-list-item-content">登录</div>
 
 	</div>
 </div>
