--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -143,9 +143,11 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
             <div class="mdui-list-item-content">Github</div>
         </a>
-	<a href="https://pan.zzy-ac.top/?setup" class="mdui-list-item mdui-ripple">
+	<a href="https://pan.zzy-ac.top/?admin" class="mdui-list-item mdui-ripple">
 			<i class="mdui-list-item-icon mdui-icon material-icons">home</i>
 			<div class="mdui-list-item-content">登录</div>
+	
+	
 
 	</div>
 </div>
