--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -144,7 +144,7 @@
             <div class="mdui-list-item-content">Github</div>
         </a>
 	<a href="https://pan.zzy-ac.top/?admin" class="mdui-list-item mdui-ripple">
-			<i class="mdui-list-item-icon mdui-icon material-icons">login</i>
+			<i class="mdui-list-item-icon mdui-icon material-icons">google</i>
 			<div class="mdui-list-item-content">登录</div>
 	</a>
 
