--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -127,7 +127,7 @@
    		 </div>
 	</div>   
 	<div class="mdui-list" mdui-collapse="{accordion: true}">
-		<a href="<!--base_path-->" class="mdui-list-item mdui-ripple">
+		<a href="https://blog.zzy-ac.top" class="mdui-list-item mdui-ripple">
 			<i class="mdui-list-item-icon mdui-icon material-icons">home</i>
 			<div class="mdui-list-item-content"><!--constStr@Home--></div>
         </a>
