--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -143,7 +143,7 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
             <div class="mdui-list-item-content">Github</div>
         </a>
-	<a href="<!--base_path-->/?admin" class="mdui-list-item mdui-ripple">
+	<a href="/?admin" class="mdui-list-item mdui-ripple">
 		<i class="mdui-list-item-icon mdui-icon material-icons">code</i>
 		<div class="mdui-list-item-content">登录</div>
 	</a>
