--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -147,7 +147,13 @@
 		<i class="mdui-list-item-icon mdui-icon material-icons">code</i>
 		<div class="mdui-list-item-content">登录</div>
 	</a>
+        <a href="?RefreshCache" class="mdui-list-item mdui-ripple">
 
+		<i class="mdui-list-item-icon mdui-icon material-icons">code</i>
+
+		<div class="mdui-list-item-content"></div>
+
+	</a>
 	</div>
 </div>
 
