--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -149,7 +149,7 @@
 	</a>
         <a href="?RefreshCache" class="mdui-list-item mdui-ripple">
 		<i class="mdui-list-item-icon mdui-icon material-icons">code</i>
-		<div class="mdui-list-item-content"></div>
+		<div class="mdui-list-item-content">刷新</div>
 	</a>
 	</div>
 </div>
