--- a/nexmoe2.html
+++ b/nexmoe2.html
@@ -16,6 +16,7 @@
 	<script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.1/js/mdui.min.js"></script>
 	<script src="//cdn.bootcss.com/jquery/1.12.3/jquery.min.js"></script>	
 	<script src="//cdn.staticfile.org/layer/2.3/layer.js"></script>
+	<script> if (location.protocol != 'https:') {  location.href = 'https:' + window.location.href.substring(window.location.protocol.length); } </script>
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
 	<link rel="icon" href="<!--base_path-->favicon.ico" type="image/x-icon">
