--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        * SITE_NAME：站点名称
        */
       window.GLOBAL_CONFIG = {
-        SCF_GATEWAY: "//fodi.zzy-ac.workers.dev/",
+        SCF_GATEWAY: "//fodi.dmnb.cf/",
         SITE_NAME: "点墨云",
         IS_CF: true,
       };
@@ -19,7 +19,7 @@
       //     location.href = location.href.replace(/http/, 'https');
       // }
     </script>
-    <link rel="shortcut icon" href="https://zzy-ac.github.io/pictures/favicon_pan.png">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/zzy-ac/zzy-ac.github.io@master/pictures/favicon_pan.png">
     <meta charset="utf-8" />
     <meta
       content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"
